--- a/About/index.html
+++ b/About/index.html
@@ -20,9 +20,39 @@
           <li><a href="">Contact</a></li>
         </ul>
       </nav>
+      <div class="user">
+        <p>Jatin Didwania</p>
+        <img src="images/user.png">
     </div>
 
     </div>
+
+    <div class="sidebar">
+      <img src="images/search.png" class="search-icon">
+      <div class="social-links">
+        <img src="images/fb.png">
+        <img src="images/pt.png">
+        <img src="images/tw.png">
+      </div>
+      <img src="images/info.png" class="info-icon">
+    </div>
+
+    <div class="msg-container">
+      <div id="slider">
+        <div class="msg-col">
+          <h1>The Reasoning</h1>
+          <p>Google LLC is an American multinational technology company
+             that specializes in Internet-related services and products,
+              which include online advertising technologies,
+               a search engine, cloud computing, software, and hardware.</p>
+               <a href="">Learn More</a>
+        </div>
+      </div>
+    </div>
+
+
+
+
 
 
 
