--- a/About/index.html
+++ b/About/index.html
@@ -47,8 +47,48 @@
                a search engine, cloud computing, software, and hardware.</p>
                <a href="">Learn More</a>
         </div>
+        <div class="msg-col">
+          <h1>The Knowledge</h1>
+          <p>Google LLC is an American multinational technology company
+             that specializes in Internet-related services and products,
+              which include online advertising technologies,
+               a search engine, cloud computing, software, and hardware.</p>
+               <a href="">Learn More</a>
+        </div>
+        <div class="msg-col">
+          <h1>The Integration</h1>
+          <p>Google LLC is an American multinational technology company
+             that specializes in Internet-related services and products,
+              which include online advertising technologies,
+               a search engine, cloud computing, software, and hardware.</p>
+               <a href="">Learn More</a>
+        </div>
+        <div class="msg-col">
+          <h1>The Learning</h1>
+          <p>Google LLC is an American multinational technology company
+             that specializes in Internet-related services and products,
+              which include online advertising technologies,
+               a search engine, cloud computing, software, and hardware.</p>
+               <a href="">Learn More</a>
+        </div>
       </div>
     </div>
+
+    <div class="controller">
+      <div id="line1"></div>
+      <div id="line2"></div>
+      <div id="line3"></div>
+      <div id="line4"></div>
+      <div id="active"></div>
+  </div>
+
+
+
+
+
+
+  </div>
+
 
 
 
