--- a/About/index.html
+++ b/About/index.html
@@ -14,7 +14,7 @@
       </div>
       <nav>
         <ul>
-          <li><a href="">About</a></li>
+          <li><a href="">Home</a></li>
           <li><a href="">Library</a></li>
           <li><a href="">Blog</a></li>
           <li><a href="">Contact</a></li>
@@ -30,7 +30,7 @@
     <div class="sidebar">
       <img src="images/search.png" class="search-icon">
       <div class="social-links">
-        <img src="images/fb.png">
+        <img src="images/gith.png">
         <img src="images/pt.png">
         <img src="images/tw.png">
       </div>
@@ -114,23 +114,7 @@
 
   }
 
-
-
-
   </script>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 </body>
