--- a/About/index.html
+++ b/About/index.html
@@ -22,7 +22,9 @@
       </nav>
       <div class="user">
         <p>Jatin Didwania</p>
+        <a href="https://heyjatin.ninja/" target="_blank">
         <img src="images/user.png">
+      </a>
     </div>
 
     </div>
@@ -30,9 +32,15 @@
     <div class="sidebar">
       <img src="images/search.png" class="search-icon">
       <div class="social-links">
+        <a href="https://github.com/jatindidwania/Chip-8_Emulator/" target="_blank">
         <img src="images/gith.png">
+      </a>
+      <a href="https://twitter.com/JatinSaysThis/" target="_blank">
         <img src="images/pt.png">
+      </a>
+        <a href="https://twitter.com/JatinSaysThis/" target="_blank">
         <img src="images/tw.png">
+      </a>
       </div>
       <img src="images/info.png" class="info-icon">
     </div>
@@ -40,7 +48,7 @@
     <div class="msg-container">
       <div id="slider">
         <div class="msg-col">
-          <h1>The Reasoning</h1>
+          <h1>Introduction</h1>
           <p>Google LLC is an American multinational technology company
              that specializes in Internet-related services and products,
               which include online advertising technologies,
@@ -48,11 +56,12 @@
                <a href="">Learn More</a>
         </div>
         <div class="msg-col">
-          <h1>The Knowledge</h1>
-          <p>Google LLC is an American multinational technology company
-             that specializes in Internet-related services and products,
-              which include online advertising technologies,
-               a search engine, cloud computing, software, and hardware.</p>
+          <h1>History</h1>
+          <p>CHIP-8 was created by RCA engineer Joe Weisbecker in 1977 for the COSMAC VIP microcomputer. It was intended as a simpler way to make small programs and games for the computer. Instead of using machine language for the VIP’s CDP1802 processor, you could type in simple hexadecimal instructions (with the VIP’s hex keypad) that resembled machine code, but which was actually interpreted on the fly by a small program.
+
+CHIP-8 soon spread to other computers, like the Finnish Telmac 1800, the Australian DREAM 6800, ETI-660 and MicroBee, and the Canadian ACE VDU. By 1984 the support for CHIP-8 petered out. However, in 1990 it had a renaissance on the HP48 graphing calculators with CHIP-48 and the now-famous SUPER-CHIP extension with higher resolution.
+
+With so many different implementations over several decades, there are many inconsistent specifications. I’ll clear those up for you along the way.</p>
                <a href="">Learn More</a>
         </div>
         <div class="msg-col">
