--- a/About/index.html
+++ b/About/index.html
@@ -15,8 +15,8 @@
       <nav>
         <ul>
           <li><a href="">Home</a></li>
-          <li><a href="">Library</a></li>
-          <li><a href="">Blog</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/CHIP-8/" target="_blank">Library</a></li>
+          <li><a href="https://www.freecodecamp.org/news/creating-your-very-own-chip-8-emulator/" target="_blank">Blog</a></li>
           <li><a href="">Contact</a></li>
         </ul>
       </nav>
@@ -48,28 +48,18 @@
     <div class="msg-container">
       <div id="slider">
         <div class="msg-col">
-          <h1>Introduction</h1>
-          <p>Google LLC is an American multinational technology company
-             that specializes in Internet-related services and products,
-              which include online advertising technologies,
-               a search engine, cloud computing, software, and hardware.</p>
+          <h1>What's a Chip-8?</h1>
+          <p>Chip-8 is a simple, interpreted, programming language which was first used on some do-it-yourself computer systems in the late 1970s and early 1980s.</p>
                <a href="">Learn More</a>
         </div>
         <div class="msg-col">
           <h1>History</h1>
-          <p>CHIP-8 was created by RCA engineer Joe Weisbecker in 1977 for the COSMAC VIP microcomputer. It was intended as a simpler way to make small programs and games for the computer. Instead of using machine language for the VIP’s CDP1802 processor, you could type in simple hexadecimal instructions (with the VIP’s hex keypad) that resembled machine code, but which was actually interpreted on the fly by a small program.
-
-CHIP-8 soon spread to other computers, like the Finnish Telmac 1800, the Australian DREAM 6800, ETI-660 and MicroBee, and the Canadian ACE VDU. By 1984 the support for CHIP-8 petered out. However, in 1990 it had a renaissance on the HP48 graphing calculators with CHIP-48 and the now-famous SUPER-CHIP extension with higher resolution.
-
-With so many different implementations over several decades, there are many inconsistent specifications. I’ll clear those up for you along the way.</p>
+          <p>CHIP-8 was created by RCA engineer Joe Weisbecker in 1977 for the COSMAC VIP microcomputer. It was intended as a simpler way to make small programs and games for the computer.</p>
                <a href="">Learn More</a>
         </div>
         <div class="msg-col">
-          <h1>The Integration</h1>
-          <p>Google LLC is an American multinational technology company
-             that specializes in Internet-related services and products,
-              which include online advertising technologies,
-               a search engine, cloud computing, software, and hardware.</p>
+          <h1>Specifications</h1>
+          <p>This section describes the Chip-8 memory, registers, display, keyboard, and timers.</p>
                <a href="">Learn More</a>
         </div>
         <div class="msg-col">
