--- a/About/index.html
+++ b/About/index.html
@@ -50,17 +50,17 @@
         <div class="msg-col">
           <h1>What's a Chip-8?</h1>
           <p>Chip-8 is a simple, interpreted, programming language which was first used on some do-it-yourself computer systems in the late 1970s and early 1980s.</p>
-               <a href="">Learn More</a>
+               <a href="learnmore1.html/" target="_blank">Learn More</a>
         </div>
         <div class="msg-col">
           <h1>History</h1>
           <p>CHIP-8 was created by RCA engineer Joe Weisbecker in 1977 for the COSMAC VIP microcomputer. It was intended as a simpler way to make small programs and games for the computer.</p>
-               <a href="">Learn More</a>
+               <a href="learnmore2.html/" target="_blank">Learn More</a>
         </div>
         <div class="msg-col">
           <h1>Specifications</h1>
           <p>This section describes the Chip-8 memory, registers, display, keyboard, and timers.</p>
-               <a href="">Learn More</a>
+               <a href="learnmore3.html/" target="_blank">Learn More</a>
         </div>
         <div class="msg-col">
           <h1>The Learning</h1>
@@ -68,7 +68,7 @@
              that specializes in Internet-related services and products,
               which include online advertising technologies,
                a search engine, cloud computing, software, and hardware.</p>
-               <a href="">Learn More</a>
+               <a href="learnmore4.html/" target="_blank">Learn More</a>
         </div>
       </div>
     </div>
