--- a/About/index.html
+++ b/About/index.html
@@ -63,7 +63,7 @@
                <a href="learnmore3.html/" target="_blank">Learn More</a>
         </div>
         <div class="msg-col">
-          <h1>The Learning</h1>
+          <h1>Instruction</h1>
           <p>Google LLC is an American multinational technology company
              that specializes in Internet-related services and products,
               which include online advertising technologies,
