--- a/About/learnmore2.html
+++ b/About/learnmore2.html
@@ -29,7 +29,7 @@ h2 {
 </head>
 
 <body>
-<h1>About Chip-8</h1>
+<h1>History</h1>
 
 <h2>The Restaurant</h2>
 <p>The Black Goose Bistro offers casual lunch and dinner fare in a hip atmosphere. The menu changes regularly to highlight the freshest ingredients.
