--- a/About/index.html
+++ b/About/index.html
@@ -64,10 +64,8 @@
         </div>
         <div class="msg-col">
           <h1>Instruction</h1>
-          <p>Google LLC is an American multinational technology company
-             that specializes in Internet-related services and products,
-              which include online advertising technologies,
-               a search engine, cloud computing, software, and hardware.</p>
+          <p>The original implementation of the Chip-8 language includes 36 different instructions, including math, graphics, and flow control functions.
+          Super Chip-48 added an additional 10 instructions, for a total of 46.</p>
                <a href="learnmore4.html/" target="_blank">Learn More</a>
         </div>
       </div>
