--- a/About/learnmore2.html
+++ b/About/learnmore2.html
@@ -8,12 +8,12 @@
   body {
   background-color: #faf2e4;
   margin: 0 15%;
-  font-family: sans-serif;
+  font-family: Courier;
   }
 
 h1 {
   text-align: center;
-  font-family: serif;
+  font-family: Courier;
   font-weight: normal;
   text-transform: uppercase;
   border-bottom: 1px solid #57b1dc;
